--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Prueba.data.br",
-        frameworkUrl: "Build/Prueba.framework.js.br",
-        codeUrl: "Build/Prueba.wasm.br",
+        dataUrl: "Build/Prueba.data",
+        frameworkUrl: "Build/Prueba.framework.js",
+        codeUrl: "Build/Prueba.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Mind Space",
