--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Prueba.data.gz",
-        frameworkUrl: "Build/Prueba.framework.js.gz",
-        codeUrl: "Build/Prueba.wasm.gz",
+        dataUrl: "Build/Prueba.data.unityweb",
+        frameworkUrl: "Build/Prueba.framework.js.unityweb",
+        codeUrl: "Build/Prueba.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Mind Space",
