--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       }).then((unityInstance) => {
-      f1("Jarol");
-      f2("jarol_pm@hotmail.com");
+      f1("name");
+      f2("mail");
       unityInstance.SendMessage("Main Camera", "GetCurrentName", name);
       unityInstance.SendMessage("Main Camera", "GetCurrentCorreo", mail);        
       });
