--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       function f2(value){
         mail = value;
       }
-      g1();
+      parent.g1();
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/Prueba.data.unityweb",
