--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       function f2(value){
         mail = value;
       }
-      window.parent.g1(name, mail);
+      //window.parent.g1(name, mail);
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/Prueba.data.unityweb",
