--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       function f2(value){
         mail = value;
       }
-
+      g1(name);
+      g2(mail);
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/Prueba.data.unityweb",
         frameworkUrl: "Build/Prueba.framework.js.unityweb",
