--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
       function f2(value){
         mail = value;
       }
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Prueba.data.unityweb",
-        frameworkUrl: "Build/Prueba.framework.js.unityweb",
-        codeUrl: "Build/Prueba.wasm.unityweb",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Mind Space",
-        productVersion: "0.1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      }).then((unityInstance) => {
-      //f1("name");
-      //f2("mail");
-      unityInstance.SendMessage("Main Camera", "GetCurrentName", name);
-      unityInstance.SendMessage("Main Camera", "GetCurrentCorreo", mail);        
-      });
+      function startApp(){
+        createUnityInstance(document.querySelector("#unity-canvas"), {
+          dataUrl: "Build/Prueba.data.unityweb",
+          frameworkUrl: "Build/Prueba.framework.js.unityweb",
+          codeUrl: "Build/Prueba.wasm.unityweb",
+          streamingAssetsUrl: "StreamingAssets",
+          companyName: "DefaultCompany",
+          productName: "Mind Space",
+          productVersion: "0.1.0",
+          // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+          // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+        }).then((unityInstance) => {
+          //f1("name");
+          //f2("mail");
+          unityInstance.SendMessage("Main Camera", "GetCurrentName", name);
+          unityInstance.SendMessage("Main Camera", "GetCurrentCorreo", mail);        
+        });
+      }
     </script>
   </body>
 </html>
