--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           //unityInstance.SendMessage("Main Camera", "GetCurrentName", name);
           //unityInstance.SendMessage("Main Camera", "GetCurrentCorreo", mail);        
         });
-      miUnityInstance.SendMessage("Main Camera", "GetCurrentName", name);
+      myUnityInstance.SendMessage("Main Camera", "GetCurrentName", name);
       myUnityInstance.SendMessage("Main Camera", "GetCurrentCorreo", mail);   
       
       //}
