--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
           // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
           // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
         }).then((unityInstance) => {
-          f1("Jarol");
-          f2("js@a.com");
+          //f1("Jarol");
+          //f2("js@a.com");
           unityInstance.SendMessage("Main Camera", "GetCurrentName", name);
           unityInstance.SendMessage("Main Camera", "GetCurrentCorreo", mail);        
-        });      
+        }); 
+        f1("Jarol");
+        f2("js@a.com");     
       //}
     </script>
   </body>
