--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       }
       var name;
       var mail;
-      function f1(value){
+      function F1(value){
         name = value;
-        alert(name);
       }
-      function f2(value){
+      function F2(value){
         mail = value;
+      }      
+      function Alert(){
+         alert("You can view this!");
       }
       //function startApp(){
         createUnityInstance(document.querySelector("#unity-canvas"), {
