--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       function F2(value){
         mail = value;
       }      
-      function Alert(){
+      function Alertaa(){
          alert("You can view this!");
       }
       //function startApp(){
